# cloudforge

./: .dockerignore  .env.example  .gitignore  API_AND_UI_GUIDE.md  AWS_MCP_INTEGRATION.md  CLAUDE.md  CLOUDFORGE.md  DOCKER.md  DOCKER_MIGRATION.md  Dockerfile  Dockerfile.api  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_LANGGRAPH_MIGRATION.md  LICENSE  Makefile  QUICKSTART.md  README.DOCKER.md  README.md  build.sh  docker-compose.yml  install.sh  mcp.json  pyproject.toml  pytest.ini
diagrams/: 12s_script.py  E-commerce Platform_script.py  Gateway_script.py  a1_script.py  a1ca_script.py  da_script.py  iot_test_script.py  my_architecture_script.py  negocio_script.py  procesamiento1_script.py  procesamiento_script.py  saas_final_script.py  serverless_cdn_script.py  serverless_script.py  test_best_practices_script.py  test_script.py  test_serverless_script.py  url_check_script.py  url_test_script.py  web_api_final_test_script.py  web_app_script.py
docker/: Dockerfile.ui
examples/: microservices.py  multi_region.py  serverless_app.py
images/: README.md
output/: a1.py  aa1.py  create21.py  diagram.py  iot_data_pipeline  maria.py  rest.py  test.py
scripts/: start_all.sh  start_api.sh  start_ui.sh
src/: __init__.py  __main__.py  api.py  api_models.py  config.py  generator.py  models.py  server.py  storage.py  validator.py
src/application/: __init__.py  services.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py  aws_mcp_client.py  config.py  (+8 more)
tests/: __init__.py  test_storage.py  test_validator.py
ui/: __init__.py  api_client.py  app.py
(+21 files in other folders)
