[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudforge"
version = "0.1.0"
description = "CloudForge: AI-Powered AWS Architecture Diagrams with Validation & Persistence via Claude MCP"
requires-python = ">=3.10"
authors = [
    {name = "CloudForge Contributors", email = "info@cloudforge.dev"}
]
dependencies = [
    "mcp",
    "diagrams>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
aws-diagram-mcp = "aws_diagram_mcp_extended.server:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
